# crsync

./: .gitignore  Cargo.toml  LICENSE  build.rs
proto/: proto.capnp
src/pb/: mod.rs
