[package]
name = "crsync"
version = "0.1.0"
edition = "2021"

[dependencies]
capnp = "0.19.6"
clap = "4.5.16"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread", "sync", "io-util", "tracing", "fs"] }

[build-dependencies]
capnpc = "0.19.0"
